Added a scripts file and began structuring site core html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,72 @@
 </head>
 <body>
 
+  <header>
+
+    <img src="" rel="" alt="logo">
+    <nav>
+
+      <ul class="header-internal-links">
+        <li>
+          <a>About Me</a>
+        </li>
+        <li>
+          <a>My Work</a>
+        </li>
+        <li>
+          <a>Contact Me</a>
+        </li>
+      </ul>
+
+      <ul class="header-external-links">
+        <li class="github-link">
+          <a></a>
+        </li>
+        <li class="discord-link">
+          <a></a>
+        </li>
+        <li class="linkedin-link">
+          <a></a>
+        </li>
+      </ul>
+
+    </nav>
+
+  </header>
+
+  <div class="main-content">
+
+    <div class="intro">
+    </div>
+
+    <div class="about-me">
+    </div>
+
+    <div class="projects">
+    </div>
+
+    <div class="contact-me">
+    </div>
+
+  </div>
+
+  <footer>
+
+    <ul class="footer-external-links">
+      <li class="github-link">
+        <a></a>
+      </li>
+      <li class="discord-link">
+        <a></a>
+      </li>
+      <li class="linkedin-link">
+        <a></a>
+      </li>
+    </ul>
+
+    <span>Copyright © 2024 Sage Welky. All rights reserved.</span>
+
+  </footer>
+
 </body>
 </html>
